--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -77,7 +77,7 @@
 
     <div class="blog-body">
         <div class="blog-title">
-            <h1><a asp-area="" asp-controller="Home" asp-action="Thema1">Corona en Lockdown</a></h1>
+            <h1><a asp-area="" asp-controller="Home" asp-action="Thema">Corona en Lockdown</a></h1>
         </div>
         <div class="blog-summary">
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
