--- a/Views/Home/Thema.cshtml
+++ b/Views/Home/Thema.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model IEnumerable<Post>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -24,6 +26,42 @@
             </symbol>
         </defs>
     </svg>
+
+    @foreach (var post in Model)
+    {
+        <div class="blog-container">
+
+        <div class="blog-header">
+            <div class="blog-author--no-cover">
+                <h3>@post.Author</h3>
+            </div>
+        </div>
+
+        <div class="blog-body">
+            <div class="blog-title">
+                <h1><a href="#">@post.Title</a></h1>
+            </div>
+            <div class="blog-summary">
+                <p>@post.Description</p>
+            </div>
+            <div class="blog-tags">
+                <ul>
+                    <li><a href="#">@post.Tag</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="blog-footer">
+            <ul>
+                <li class="published-date">2 dagen geleden</li>
+                <li class="comments"><a href="#"><svg class="icon-bubble"><use xlink:href="#icon-bubble"></use></svg><span class="numero">4</span></a></li>
+                <li class="shares"><a href="#"><svg class="icon-star"><use xlink:href="#icon-star"></use></svg><span class="numero">1</span></a></li>
+            </ul>
+        </div>
+
+        </div>
+    }
+
 
     <div class="blog-container">
 
@@ -87,8 +125,10 @@
             <ul>
                 <li class="published-date">2 dagen geleden</li>
                 <li class="comments">
-                <a asp-area="" asp-controller="Home" asp-action="Comments">
-                <svg class="icon-bubble"><use xlink:href="#icon-bubble"></use></svg><span class="numero">4</span></a></li>
+                    <a asp-area="" asp-controller="Home" asp-action="Comments">
+                        <svg class="icon-bubble"><use xlink:href="#icon-bubble"></use></svg><span class="numero">4</span>
+                    </a>
+                </li>
                 <li class="shares"><a href="#"><svg class="icon-star"><use xlink:href="#icon-star"></use></svg><span class="numero">1</span></a></li>
             </ul>
         </div>
