--- a/Views/Home/Thema.cshtml
+++ b/Views/Home/Thema.cshtml
@@ -54,7 +54,11 @@
         <div class="blog-footer">
             <ul>
                 <li class="published-date">2 dagen geleden</li>
-                <li class="comments"><a href="#"><svg class="icon-bubble"><use xlink:href="#icon-bubble"></use></svg><span class="numero">4</span></a></li>
+                <li class="comments">
+                    <a asp-area="" asp-controller="Home" asp-action="Comments">
+                        <svg class="icon-bubble"><use xlink:href="#icon-bubble"></use></svg><span class="numero">4</span>
+                    </a>
+                </li>
                 <li class="shares"><a href="#"><svg class="icon-star"><use xlink:href="#icon-star"></use></svg><span class="numero">1</span></a></li>
             </ul>
         </div>
