--- a/Views/Home/CreatePostPage.cshtml
+++ b/Views/Home/CreatePostPage.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="header">
-    <div class="info">
+    <div class="info" style="padding:50px;">
         <h1>Forum gemeente Horst aan de Maas</h1>
         <h3>Samen staan we sterker</h3>
         <div class="meta">
