--- a/Views/Home/Thema.cshtml
+++ b/Views/Home/Thema.cshtml
@@ -13,7 +13,7 @@
 <section class="content">
     <div class="container" style="border-bottom: 2px solid green">
         <h1 class="row" style="text-align: center"> Recente Berichten </h1>
-        <a style="text-align: center" asp-action="CreatePostPage" value="Create" class="mb-2 row btn btn-primary">Create a new Post</a>
+        <a style="text-align: center" asp-action="CreatePostPage" value="Create" class="mb-2 row btn btn-primary">Maak een nieuw bericht</a>
     </div>
     <svg display="none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
@@ -27,8 +27,6 @@
             </symbol>
         </defs>
     </svg>
-
-
 
     @if (Model.Count() == 0)
     {
