--- a/Views/Home/CreatePostPage.cshtml
+++ b/Views/Home/CreatePostPage.cshtml
@@ -41,7 +41,12 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Tag" class="control-label">Thema:</label>
-                    <input asp-for="Tag" class="form-control" />
+                    <select asp-for="Tag" class="form-control">
+                        <option value="@null">Selecteer een Thema</option>
+                        <option value="Corona en Lockdown">Corona en Lockdown</option>
+                        <option value="Milieu">Milieu</option>
+                    </select>
+                    
                     <span asp-validation-for="Tag" class="text-danger"></span>
                 </div>
                 <div class="form-group">
