--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -44,8 +44,8 @@
 
             <div class="nav-menu">
                 <ul>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index"><span class="icon-home mr-3"></span>Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Thema"><span class="icon-search2 mr-3"></span>Thema's</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Posts"><span class="icon-home mr-3"></span>Home</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index"><span class="icon-search2 mr-3"></span>Thema's</a></li>
                     <li><a href="#"><span class="icon-notifications mr-3"></span>Notificaties</a></li>
                     <li><a href="#"><span class="icon-location-arrow mr-3"></span>Profiel</a></li>
                     <li><a href="#"><span class="icon-pie-chart mr-3"></span>Contact</a></li>
