--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 <section class="content">
     <div class="container">
 
-        <h1 style="text-align: center"> Recente Thema's </h1>
+        <h1 style="text-align: center">Thema's </h1>
 
         <svg display="none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <defs>
@@ -106,8 +106,6 @@
             </div>
 
         </div>
-
-        <h1 style="text-align: center"> Recente Berichten </h1>
 
         <div class="blog-container">
 
