--- a/Views/Home/Posts.cshtml
+++ b/Views/Home/Posts.cshtml
@@ -17,7 +17,7 @@
 
 
 <div class="container" style="border-bottom: 2px solid green">
-    <h1 class="row" style="text-align: center"> Recente Berichten </h1>
+    <h1 class="row" style="text-align: center"> Nieuwe Berichten </h1>
     <a style="text-align: center" asp-action="CreatePostPage" value="Create" class="mb-2 row btn btn-primary">Maak een nieuw bericht</a>
 </div>
 
