--- a/Views/Home/CreatePostPage.cshtml
+++ b/Views/Home/CreatePostPage.cshtml
@@ -15,7 +15,7 @@
     </div>
 </div>
 <div style="text-align:center;">
-    <h1>Maak een nieuwe post</h1>
+    <h1>Maak een nieuw bericht</h1>
     <h3>Stel een vraag of deel wat leuks!</h3>
 </div>
 
